<resources>
    <string name="app_name">PartyCheckApp</string>
    <string name="debtors">Debtors</string>
    <string name="search">Search</string>
    <string name="my_party">My parties</string>
    <string name="profile">Profile</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">home</string>
    <string name="search_hint">input some data</string>
    <string name="title_activity_drawer">DrawerAct</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_string">Welcome To Party Purse!</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_in">First time here? Sign in</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="email">Email</string>
    <string name="phone">phone number</string>
    <string name="card_number">card number</string>
    <string name="error_phone">Enter phone number!</string>
    <string name="error_login">Enter your nickname!</string>
    <string name="error_pass">Enter password!</string>
    <string name="error_title">Enter title!</string>
    <string name="error_description">Enter description!</string>
    <string name="error_place">Enter place!</string>
    <string name="error_price">Enter price!</string>
    <string name="add_party">Add Party</string>
    <string name="error_pass_length">Password too short, enter minimum 6 characters!</string>
    <string name="error_signin">Sign In Error</string>
    <string name="debt_size">Debt Size</string>
    <string name="debt_repaid">Debt Repaid</string>
    <string name="debt_approve">Wait approve from second side</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="place">Place</string>
    <string name="event_time">Event Time</string>
    <string name="event_photo">Event Photo</string>
    <string name="add">Add</string>
    <string name="price">Price</string>
    <string name="depositors">Depositors</string>
    <string name="purchase_photo">Purchase Photo</string>
    <string name="check_photo">Check Photo</string>
    <string name="date">Date</string>
    <string name="phone_def">+X-XXX-XXX-XX-XX</string>
    <string name="card_def">XXXX-XXXX-XXXX-XXXX</string>
    <string name="debt_details">Debt Details</string>
    <string name="debtor_list">Debtor List</string>
    <string name="add_party">Add Party</string>
    <string name="add_purchase">Add Purchase</string>
    <string name="purchase_details">Purchase Details</string>
    <string name="purchase_list">Purchase List</string>
    <string name="search_party">Search Party</string>
    <string name="choose_type">Choose Type</string>
    <string name="select_picture">Select Picture</string>
</resources>
