<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_string"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:textSize="24sp"
            android:layout_marginTop="40dp"
            android:textColor="@color/colorPrimaryText"
    />

    <ImageView
            android:id="@+id/iv_icon"
            android:layout_height="90dp"
            android:layout_width="90dp"
            android:src="@drawable/ic_party"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/tv_welcome"
            android:layout_marginTop="40dp"
    />

    <EditText
            android:id="@+id/et_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:layout_below="@+id/iv_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:hint="@string/login"
    />

    <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="15"
            android:layout_below="@+id/et_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:hint="@string/password"
    />

    <Button
            android:id="@+id/btn_log_in"
            style="@style/ButtonMain"
            android:layout_width="280dp"
            android:layout_height="40dp"
            android:text="@string/log_in"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/et_password"
            android:textSize="20sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="60dp"
    />

    <Button
            android:id="@+id/btn_sign_in_offer"
            style="@style/ButtonMain"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:text="@string/sign_in"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/btn_log_in"
            android:textSize="10sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="60dp"
    />
</RelativeLayout>