<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.appbar.AppBarLayout
                    android:id="@+id/appbar"
                    android:layout_width="match_parent"
                    android:background="@color/colorPrimary"
                    android:theme="@style/Base.Theme.AppCompat.Light.DarkActionBar"
                    android:layout_height="wrap_content">

                <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        app:titleTextColor="@color/colorWhite"
                        android:layout_width="match_parent"
                        android:layout_height="?actionBarSize">

                </androidx.appcompat.widget.Toolbar>
            </com.google.android.material.appbar.AppBarLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/appbar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp">
                <EditText
                        android:id="@+id/et_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:hint="@string/title"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/ti_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/ti_title"
                    android:layout_marginTop="16dp">
                <EditText
                        android:id="@+id/et_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="15"
                        android:inputType="number"
                        android:hint="@string/price"
                />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:id="@+id/tv_depositors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ti_price"
                    android:layout_marginTop="8dp"
                    android:layout_alignStart="@+id/ti_price"
                    android:textSize="18sp"
                    android:textColor="@color/colorSecondaryText"
                    android:text="@string/depositors"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_below="@+id/tv_depositors"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:nestedScrollingEnabled="true"
                    tools:listitem="@layout/user_item_for_purchase"/>


            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="30dp"
                    android:layout_below="@+id/recycler_view"
                    android:src="@drawable/ic_empty_profile_photo_24dp"
                    app:civ_border_width="1dp"
                    app:civ_border_color="#FF000000"
            />

            <TextView
                    android:id="@+id/add_photo_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/recycler_view"
                    android:layout_toEndOf="@id/iv_photo"
                    android:layout_marginTop="36dp"
                    android:layout_marginStart="12dp"
                    android:textSize="18sp"
                    android:text="@string/purchase_photo"/>


            <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_check"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="30dp"
                    android:layout_below="@+id/iv_photo"
                    android:src="@drawable/ic_empty_profile_photo_24dp"
                    app:civ_border_width="1dp"
                    app:civ_border_color="#FF000000"/>

            <TextView
                    android:id="@+id/add_check_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_photo"
                    android:layout_toEndOf="@id/iv_photo"
                    android:layout_marginTop="36dp"
                    android:layout_marginStart="12dp"
                    android:textSize="18sp"
                    android:text="@string/check_photo"/>


            <Button
                    android:id="@+id/btn_accept"
                    style="@style/ButtonMain"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_check"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/add"
                    android:layout_marginEnd="8dp"/>

        </RelativeLayout>
    </ScrollView>