<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:theme="@style/Base.Theme.AppCompat.Light.DarkActionBar"
            android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                app:titleTextColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize">

        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_photo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="32dp"
            android:src="@drawable/ic_empty_profile_photo_24dp"
            android:layout_below="@+id/appbar"
            app:civ_border_width="1dp"
            app:civ_border_color="#FF000000"
    />

    <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:textSize="20sp"
            android:layout_toEndOf="@+id/iv_photo"
            android:layout_alignTop="@+id/iv_photo"
            android:layout_marginTop="30dp"
            android:layout_marginStart="16dp"
            tools:text="Some User Name"/>

    <TextView
            android:id="@+id/tv_phone_num_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/iv_photo"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"
            android:text="@string/phone"/>

    <TextView
            android:id="@+id/tv_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone_num_title"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            tools:text="88007007070"/>

    <TextView
            android:id="@+id/tv_card_num_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_phone_num"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"
            android:text="@string/card_number"/>

    <TextView
            android:id="@+id/tv_card_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_card_num_title"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="18sp"
            tools:text="5555 4444 3333 2222"/>

    <TextView
            android:id="@+id/tv_debt_size_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_card_num"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="16sp"
            android:text="@string/debt_size"/>

    <TextView
            android:id="@+id/tv_debt_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_debt_size_title"
            android:layout_marginTop="8dp"
            android:layout_marginStart="32dp"
            android:textColor="@color/colorGreenNumber"
            android:textSize="18sp"
            tools:text="100$"/>

    <Button
            android:id="@+id/btn_debt"
            style="@style/ButtonMain"
            android:layout_width="96dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_debt_size"
            android:textSize="14sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="48dp"
            android:layout_marginStart="32dp"
            android:text="@string/debt_repaid"/>

    <TextView
            android:id="@+id/tv_debt_approve"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/btn_debt"
            android:layout_toEndOf="@id/btn_debt"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorSecondaryText"
            android:textSize="14sp"
            tools:text="Wait approve from second side"/>

</RelativeLayout>