<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:fitsSystemWindows="true"
            android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapse_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                    android:id="@+id/iv_party"
                    android:layout_width="match_parent"
                    android:layout_height="264dp"
                    android:fitsSystemWindows="true"
                    android:scaleType="centerCrop"
                    android:transitionName="transaction_poster"
                    android:background="@color/colorPrimary"
                    app:layout_collapseMode="parallax"/>

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    app:titleTextColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin">

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>



    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:orientation="vertical">

            <ImageButton
                    android:id="@+id/btn_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="16sp"
                    android:src="@drawable/ic_basket_1055098"
                    android:background="@null"/>

            <TextView
                    android:id="@+id/tv_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/description"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_desc"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    tools:text="Description"/>

            <TextView
                    android:id="@+id/tv_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_description"
                    android:layout_marginTop="16dp"
                    android:text="@string/date"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_date_title"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    tools:text="24.02.1546"/>

            <TextView
                    android:id="@+id/tv_place_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_date"
                    android:layout_marginTop="16dp"
                    android:text="@string/place"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="16sp"/>

            <TextView
                    android:id="@+id/tv_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_place_title"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp"
                    tools:text="Place"/>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>